@@ -172,7 +172,6 @@ short ShardGun(int x, int y, int z, short velocity, short yRot, short roomNumber
 	if (fxNumber != NO_ITEM)
 	{
 		auto& fx = EffectList[fxNumber];
-
 		fx.pos.Position = Vector3i(x, y, z);
 		fx.pos.Orientation = EulerAngles(0, yRot, 0);
 		fx.roomNumber = roomNumber;
@@ -192,33 +191,12 @@ short BombGun(int x, int y, int z, short velocity, short yRot, short roomNumber)
 	if (fxNumber != NO_ITEM)
 	{
 		auto& fx = EffectList[fxNumber];
-
 		fx.pos.Position = Vector3i(x, y, z);
 		fx.pos.Orientation = EulerAngles(0, yRot, 0);
 		fx.roomNumber = roomNumber;
 		fx.speed = velocity;
 		fx.frameNumber = 0;
 		fx.objectNumber = ID_PROJ_BOMB;
-		fx.color = Vector4::One;
-		ShootAtLara(fx);
-	}
-
-	return fxNumber;
-}
-
-short NatlaGun(int x, int y, int z, short velocity, short yRot, short roomNumber)
-{
-	short fxNumber = CreateNewEffect(roomNumber);
-	if (fxNumber != NO_ITEM)
-	{
-		auto& fx = EffectList[fxNumber];
-
-		fx.pos.Position = Vector3i(x, y, z);
-		fx.pos.Orientation = EulerAngles(0, yRot, 0);
-		fx.roomNumber = roomNumber;
-		fx.speed = velocity;
-		fx.frameNumber = 0;
-		fx.objectNumber = ID_PROJ_NATLA;
 		fx.color = Vector4::One;
 		ShootAtLara(fx);
 	}
