@@ -7,4 +7,3 @@ void ControlNatlaGun(short fxNumber);
 
 short ShardGun(int x, int y, int z, short velocity, short yRot, short roomNumber);
 short BombGun(int x, int y, int z, short velocity, short yRot, short roomNumber);
-short NatlaGun(int x, int y, int z, short velocity, short yRot, short roomNumber);
