@@ -161,9 +161,9 @@ enum GAME_OBJECT_ID : short
 	ID_CENTAUR_MUTANT,
 	ID_DOPPELGANGER,
 	ID_NATLA,
-	ID_WINGED_NATLA,
+	ID_WINGED_NATLA, // NOTE: not used (using ID_NATLA instead). TokyoSU: 08/07/2023
 	ID_GIANT_MUTANT,
-	ID_PROJ_NATLA,
+	ID_PROJ_NATLA, // NOTE: not used (using ID_PROJ_BOMB instead). TokyoSU: 08/07/2023
 	ID_PROJ_SHARD,
 	ID_PROJ_BOMB,
 	ID_YETI,
